[gd_scene load_steps=11 format=3 uid="uid://cqkkj3r0se3dh"]

[ext_resource type="Script" path="res://scripts/walking_enemy.gd" id="1_ejq20"]
[ext_resource type="Shader" path="res://scenes/walking_enemy.gdshader" id="2_pj4ru"]
[ext_resource type="Texture2D" uid="uid://dpv1d44usl4ys" path="res://sprites/characters_packed.png" id="3_2boln"]
[ext_resource type="PackedScene" uid="uid://cg55clgqa14ae" path="res://scenes/hitbox.tscn" id="4_lk5nw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lic4a"]
shader = ExtResource("2_pj4ru")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pymjc"]
atlas = ExtResource("3_2boln")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhawi"]
atlas = ExtResource("3_2boln")
region = Rect2(96, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8t6c0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pymjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhawi")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gemh2"]
size = Vector2(20, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0psn3"]
size = Vector2(20, 15)

[node name="WalkingEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ejq20")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lic4a")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_8t6c0")
animation = &"walking"
autoplay = "walking"
frame = 1
frame_progress = 0.330885

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_gemh2")

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(9, -5)
target_position = Vector2(0, 5)

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-9, -5)
target_position = Vector2(0, 5)

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Hitbox" parent="." instance=ExtResource("4_lk5nw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_0psn3")
